z-index fix

--- a/iframes/scrollTop/1c9a3c182563821140ed51f1f36c8461/style.css
+++ b/iframes/scrollTop/1c9a3c182563821140ed51f1f36c8461/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .scroll-top-container {
-    z-index: 20;
+    z-index: 1000 !important;
     position: fixed;
     bottom: 40px;
     right: 40px;
